# learn-cicd-starter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-safety.py  .safety-project.ini  Dockerfile  auth.py  crud.py  database.py  db_models.py  main.py  models.py  pre-commit-pytest.py  pre-commit-safety.py  pre_commit.py  pyproject.toml  test_auth.py
.github/workflows/: cd.yml  ci.yml
